# Advanced-Programming-Technology_P2

./: CMakeLists.txt  Heat.cu  README.md
src/: helper_cuda.h  helper_string.h
